# CtrlAssist

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  flatpak-release.yml  release-package.yml  release.yml  rust.yml
docs/: .gitattributes
docs/artwork/: banner.aseprite  banner.md  icon_48.aseprite
flatpak/: .gitignore  README.md  cargo-sources.json  io.github.ruffsl.ctrlassist.desktop  io.github.ruffsl.ctrlassist.metainfo.xml  io.github.ruffsl.ctrlassist.yml
src/: evdev_helpers.rs  ff_helpers.rs  gilrs_helper.rs  log_setup.rs  main.rs  mux_manager.rs  mux_runtime.rs  udev_helpers.rs
src/dux_modes/: mod.rs
src/mux_modes/: average.rs  helpers.rs  mod.rs  priority.rs  toggle.rs
src/tray/: app.rs  config.rs  mod.rs  state.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
